# ttrcalc

./: meson.build
.github/workflows/: build.yml
PKGBUILD/: PKGBUILD
src/: App.vala  MainWindow.vala  meson.build
ui/: eu.dupaw.ttrcalc.desktop  main-window.ui  meson.build  resources.xml  ttrcalc.css
